[package]
name = "display"
version = "0.1.0"
edition = "2024"

[dependencies]
rp2040-hal = "0.10.2"
rp-pico = "0.9.0"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
fugit = "0.3.7"
itoa = "1.0.14"
heapless = "0.8.0"
