[package]
name = "display"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
fugit = "0.3.7"
heapless = "0.8.0"
itoa = "1.0.14"
panic-halt = "1.0.0"
rp2040-hal = { version = "0.10.0", package="rp2040-hal"  }
rp-pico = "0.9.0"
ssd1306 = "0.9.0"
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"